--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  background-image: url(https://images.unsplash.com/photo-1748989431517-89991935135b?q=80&w=1926&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
 }
 
 code {
